canary-deployment/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: compose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: compose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: mongo
    spec:
      containers:
      - image: nikhilgoenka/mongo
        imagePullPolicy: IfNotPresent
        name: mongo
        ports:
          - containerPort: 27017
        resources: {}
      restartPolicy: Always
status: {}
